GL/Projet_GL/src/test/deca/syntax/invalid/sansObjet/include_not_found.deca
// Test : Include not Found
// But : interdire d'include un fichier non existant.
// Type d'erreur : erreur syntaxique
// Résultat attendu : Include not found

#include "fichier_fantome.decah"

